Fix for content that is overlapping the footer

--- a/web-ui/src/main/resources/catalog/views/default/less/gn_footer_default.less
+++ b/web-ui/src/main/resources/catalog/views/default/less/gn_footer_default.less
@@ -36,6 +36,7 @@
   border-width: 1px 0 0 0;
   background: @gn-bottombar-background;
   border-color: @gn-bottombar-border-color;
+  z-index: 98;
   .gn-footer-text > span {
     color: @gn-bottombar-color !important;
   }
